# pukenga-takoha-smart-scale

./: README.md
project/adc/: CMakeLists.txt  main.c
project/backend/: .env.development  package-lock.json  package.json  tsconfig.json
project/backend/src/: authenticationMiddleware.ts  context.ts  db.ts  index.ts  kint.ts
project/backend/src/models/: ParentModel.ts  adminModel.ts  childrenModel.ts  exampleModel.ts  models.ts  nurseModel.ts  scaleModel.ts
project/backend/src/routes/admins/: POST.ts
project/backend/src/routes/assigned-children/: GET.ts
project/backend/src/routes/children/: GET.ts  POST.ts
project/backend/src/routes/children/[child_id]/: DELETE.ts  GET.ts  PUT.ts
project/backend/src/routes/children/[child_id]/add-nurse/: POST.ts
project/backend/src/routes/children/[child_id]/weighings/: GET.ts  POST.ts
project/backend/src/routes/example/: GET.ts  POST.ts
project/backend/src/routes/login/: GET.ts  POST.ts
project/backend/src/routes/nurses/: GET.ts  POST.ts
project/backend/src/routes/nurses/[id]/: DELETE.ts  GET.ts
project/backend/src/routes/parents/: POST.ts
project/backend/src/routes/scales/: GET.ts  POST.ts
project/backend/src/routes/scales/[physical_scale_id]/: DELETE.ts  GET.ts  POST.ts
project/backend/src/routes/support/: POST.ts
project/backend/src/routes/utils/: nurseIsAuthorised.ts
project/embedded/: CMakeLists.txt  defines.h  functions.c  functions.h  main.c  tls_common.c
project/frontend/web/: package-lock.json  package.json  tailwind.config.ts
project/frontend/web/src/app/: globals.css  layout.tsx  not-found.tsx
project/frontend/web/src/app/(pages)/: layout.tsx  page.tsx
project/frontend/web/src/app/(pages)/admin-support/: page.tsx
project/frontend/web/src/app/(pages)/create-record/: page.tsx
project/frontend/web/src/app/(pages)/logout/: page.tsx
project/frontend/web/src/app/components/: ChildCard.tsx  CreateWeighing.tsx  Navbar.tsx  RecentChildren.tsx  WeightChart.tsx
project/frontend/web/src/context/: ApiContext.tsx  Providers.tsx
project/frontend/web/src/enums/: httpMethod.ts
project/frontend/web/src/hooks/: useObservable.tsx  useRequireLogin.tsx
project/frontend/web/src/models/: Children.ts  Nurse.ts
project/frontend/web/src/services/: Api.ts  oldApi.ts
project/frontend/web/src/services/date-utils/: ConvertIsoStringToDateString.ts
project/i2c/: CMakeLists.txt  main.c
project/mobile/PlunketMobileClient/: App.tsx  README.md  app.json  package-lock.json  package.json  tailwind.config.js
project/mobile/PlunketMobileClient/app/: _layout.tsx  index.tsx
project/mobile/PlunketMobileClient/app/childrecord/[childid]/: index.tsx
project/mobile/PlunketMobileClient/app/components/: Button.tsx  ChildCard.tsx  Header.tsx  Loading.tsx  Navigation.tsx  WeightCard.tsx
project/mobile/PlunketMobileClient/app/context/: PlunketApiContext.tsx  providers.tsx
project/mobile/PlunketMobileClient/app/createchildrecord/: index.tsx
project/mobile/PlunketMobileClient/app/hooks/: usePlunketApi.ts
project/mobile/PlunketMobileClient/app/lib/: plunketApi.ts
project/mobile/PlunketMobileClient/app/main/: index.tsx
project/mobile/PlunketMobileClient/app/support/: index.tsx
project/wifi/: CMakeLists.txt  main.c  tls_common.c
(+12 files in other folders)
